// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the expenses summary correctly with 1 expense 1`] = `
<div>
  <p>
    1
     
    expense
     totalling 
    $0.00
  </p>
</div>
`;

exports[`should render the expenses summary correctly with many expenses 1`] = `
<div>
  <p>
    5
     
    expenses
     totalling 
    $0.00
  </p>
</div>
`;
